# SharMemPlusPlus

./: .gitignore  README.md
src/: Common.hpp  Error.cpp  Error.hpp  ErrorBuilder.cpp  ErrorBuilder.hpp  FlagCommon.cpp  FlagCommon.hpp  MFlag.hpp  MMapOptions.cpp  MMapOptions.hpp  MMaper.cpp  MMaper.hpp  Mode.cpp  Mode.hpp  Name.hpp  OFlag.hpp  OpenOptions.cpp  OpenOptions.hpp  Protection.hpp  Semaphore.cpp  Semaphore.hpp  SharedMemory.cpp  SharedMemory.hpp
tests/: .gitignore  CMakeLists.txt  ErrorBuilder_test.cpp  MMaper_test.cpp  Mode_test.cpp  OFlag_test.cpp  Semaphore_test.cpp  ShMem_test.cpp
tests/gtest/: .gitignore
